<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shirts"
        android:orderInCategory="101"
        android:title="@string/shirts"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_pants"
        android:orderInCategory="102"
        android:title="@string/pants"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_show_all"
        android:orderInCategory="103"
        android:title="@string/show_all"
        app:showAsAction="ifRoom"/>

</menu>
